# claude_watcher

./: .gitignore  README.md  pyproject.toml
src/claude_watcher/: __init__.py  __main__.py  app.py  jsonl.py  models.py  procs.py  sessions.py  status.py  tokens.py  transcripts.py
tests/: test_logic.py
