[project]
name = "claude-watcher"
version = "0.1.0"
description = "Live TUI monitor for running Claude Code CLI sessions"
readme = "README.md"
authors = [
    { name = "Daniel Lewis", email = "daniel.robert.lewis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.7",
]

[project.scripts]
claude-watcher = "claude_watcher.app:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
